--- a/css/style.css
+++ b/css/style.css
@@ -2,8 +2,8 @@
 
 @font-face {
     font-family: "Open Sans";
-    src: local("OpenSans-Regular"), url(fonts/OpenSans-Regular.woff) format("woff"),
-    url(fonts/OpenSans-Regular.woff2) format("woff2");
+    src: local("OpenSans-Regular"), url(/fonts/OpenSans-Regular.woff) format("woff"),
+    url(/fonts/OpenSans-Regular.woff2) format("woff2");
     font-weight: normal;
     font-style: normal;
     font-display: swap;
@@ -11,22 +11,41 @@
 
 @font-face {
     font-family: "Open Sans";
-    src: local("OpenSans-Bold"), url(fonts/OpenSans-Regular.woff) format("woff"),
-    url(fonts/OpenSans-Regular.woff) format("woff2");
+    src: local("OpenSans-Bold"), url(/fonts/OpenSans-Regular.woff) format("woff"),
+    url(/fonts/OpenSans-Regular.woff) format("woff2");
     font-weight: bold;
     font-style: normal;
     font-display: swap;
 }
 
+/*General-styles*/
 
 .page {
     font-family: "Open Sans", Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
     color: #0f0d0e;
+    max-width: 1660px;
+    margin: 0 auto;
 }
 
-/*General-styles*/
+ul {
+    list-style-type: none;
+    margin: 0;
+    padding: 0;
+}
+
+a {
+   text-decoration: none;
+}
+
+a:link {
+    color: #ffffff;
+}
+
+a:visited {
+    color: #ffffff;
+}
 
 .link {
 
@@ -35,6 +54,8 @@
 .heading {
     text-transform: uppercase;
     line-height: 1.821875rem;
+    padding: 0;
+    margin: 0;
 }
 
 .tag {
@@ -59,7 +80,8 @@
 }
 
 .header {
-
+    margin: 0;
+    padding: 0;
 }
 
 .content-container__item {
@@ -77,16 +99,51 @@
     background-color: #f4f7f6;
 }
 
+.content-column {
+    width: 1170px;
+    margin: 0 auto;
+}
+
 /*Header-styles*/
 
 .main-header {
-    background-color: #666666;
+    height: 450px;
+    width: 100%;
+    background-image: url("/images/banner-bg.jpg");
+    background-position-y: -1px;
+    background-repeat: no-repeat;
+    position: relative;
+}
+
+.main-header:before {
+    content: "";
+    position: absolute;
+    width: inherit;
+    height: inherit;
+    background-color: rgba(0 0 0 /0.6);
+
+}
+
+.main-header_elements-container {
+    box-sizing: border-box;
+    padding: 29px 245px 0 245px;
+    position: absolute;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: space-between;
 }
 
 .main-header__heading {
     font-size: 2.8125rem;
     color: #ffffff;
     line-height: 4.6875rem;
+    margin: 100px 19% 0 ;
+
+    /*padding: 126px 146px;*/
+    text-align: center;
+    width: 100%;
+    font-variant-ligatures: normal;
+
 }
 
 .logo-link {
@@ -94,7 +151,7 @@
 }
 
 .logo {
-
+    padding-left: 3px;
 }
 
 .main-menu {
@@ -102,50 +159,144 @@
 }
 
 .nav-links {
+    display: flex;
+    padding-top: 11px;
+    gap: 35px;
 
 }
 
 .nav-links__item {
-
+    color: #ffffff;
 }
 
 .nav-links__link {
     font-size: 0.8125rem;
-
-}
-
-.main {
-
 }
 
 /*Trand-section styles*/
 
-.section {
-
+.trends {
+    height: 443px;
+    flex-wrap: wrap;
 }
 
 .section__header {
-
+    height: 123px;
+    width: 100%;
 }
 
 .section-heading {
+    display: block;
     font-size: 1.25rem;
     line-height: 1.821875rem;
+    text-align: center;
+    padding-top: 56px;
+}
+
+.section-heading:after {
+    display: block;
+    width: 66px;
+    content: "";
+    border-bottom: 3px solid #b59f5b;
+    opacity: 40%;
+    margin: 0 auto;
+    padding-bottom: 7px;
 }
 
 .section__content-container {
+    height: calc(443px - 123px);
+    width: initial;
+    display: flex;
+    gap: 4px;
 }
 
 .section__item {
     background-color: #999999;
 }
 
-.link-container {
-
+.section__item:first-child, .section__item:last-child {
+    width: 410px;
 }
 
-.link-container__interior-block {
+.section__item:nth-child(2), .section__item:nth-child(3) {
+    width: 414px;
+}
 
+.link-container {
+    width: inherit;
+    height: inherit;
+}
+
+.link-container__block-1 {
+    background-image: url("/images/trend1.jpg");
+    background-position-x: -5px;
+}
+
+.link-container__block-2 {
+    background-image: url("/images/trend2.jpg");
+    background-position-x: 0;
+}
+
+.link-container__block-3 {
+    background-image: url("/images/trend3.jpg");
+    background-position-x: -1px;
+}
+
+.link-container__block-4 {
+    background-image: url("/images/trend4.jpg");
+    background-position-x: -1px;
+    background-position-y: 0;
+}
+
+.link-container__interior {
+    position: relative;
+    display: flex;
+    width: 100%;
+    height: 100%;
+    background-repeat: no-repeat;
+    background-size: cover;
+}
+
+.link-container__interior:before {
+    content: "";
+    position: absolute;
+    width: 100%;
+    height: 100%;
+    background-color: rgba(0 0 0 /0.6);
+}
+
+.link-container__text-container {
+    position: absolute;
+    max-width: 100%;
+    max-height: 100%;
+    padding-bottom: 33px;
+    padding-left: 32px;
+    padding-top: 19px;
+    border: 3px solid rgba(181, 159, 91, 0.6);
+    margin-bottom: 16px;
+    align-self: end;
+}
+
+.link-container__block-1 .link-container__text-container {
+    margin-left: 19px;
+    margin-right: 22px;
+    padding-right: 65px;
+}
+
+.link-container__block-4 .link-container__text-container {
+    margin-right: 19px;
+    margin-left: 22px;
+}
+
+.link-container__block-2 .link-container__text-container {
+    margin-left: 21px;
+    margin-right: 24px;
+}
+
+.link-container__block-3 .link-container__text-container {
+    margin-right: 21px;
+    margin-left: 24px;
+    padding-right: 65px;
 }
 
 .link-container__name {
@@ -155,25 +306,62 @@
 }
 
 .link-container__tag {
-
+    display: inline-block;
+    line-height: 1.957rem;
+    margin-top: 9px;
+    margin-left: 2px;
+    margin-right: 12px;
 }
 
 /*Snippets-section styles*/
 
-.section-articles {
+.two-columns-section {
+    display: flex;
 
+}
+
+.section-articles {
+    width: 76.83760684%;
+        margin-top: 51px;
 }
 
 .articles {
-
+    display: flex;
+    flex-flow: column;
+    margin: 0;
+    padding: 0;
 }
 
-.articles__item {
-
+.articles__item:nth-child(1) {
+    margin-bottom: 59px;
 }
+
+.articles__item:nth-child(2) {
+    margin-bottom: 60px;
+}
+
+.articles__item:nth-child(3) {
+    margin-bottom: 61px;
+}
+
+.articles__item:nth-child(4) {
+    margin-bottom: 62px;
+}
+
+/*.articles__item:last-child {;*/
+/*    margin-bottom: 0;*/
+/*}*/
 
 .snippet {
+    display: flex;
+    align-content: flex-start;
+    height: 294px;
+    /*margin-top: -13px;*/
+}
 
+.text-block {
+    padding-left: 29px;
+    padding-right: 125px;
 }
 
 .snippet__header {
@@ -181,11 +369,15 @@
 }
 
 .snippet__tags {
+    margin-left: 2px;
+    display: flex;
+    justify-content: flex-start;
+    gap: 18px;
 
 }
 
 .snippet__tag {
-
+    /*margin-right: 14px;*/
 }
 
 .snippet__link {
@@ -195,9 +387,16 @@
 .snippet__heading {
     font-size: 1.25rem;
     line-height: 1.5rem;
+    margin-top: -4px;
+
 }
 
 .snippet__author-data-container {
+    margin-top: 16px;
+    display: flex;
+    justify-content: flex-start;
+    gap: 13px;
+    margin-bottom: 35px;
 }
 
 .snippet__data {
@@ -215,16 +414,18 @@
 .snippet__text {
     font-size: 0.9375rem;
     line-height: 1.375rem;
+    margin: 0;
+    padding-bottom: 10px;
 }
 
 .snippet__img {
-
+    padding-top: 13px;
 }
 
 /*Aside-section styles*/
 
 .aside {
-
+    width: 23.16239316%;
 }
 
 .label {
@@ -357,18 +558,43 @@
 }
 
 .shop {
+    height: 562px;
+    padding-top: 13px;
+}
+
+.shop__content-container {
+    display: flex;
+    align-content: flex-start;
+    justify-content: space-between;
+
+}
+
+.content-container__item {
 
 }
 
 .shop__item {
+    position: relative;
+    box-sizing: border-box;
+    /*height: 440px;*/
+    width: 347px;
+    display: flex;
+    flex-flow: column;
 
 }
 
 .shop__image {
-
+    margin: 0 auto;
+    width: 300px;
 }
 
 .shop__card {
+    /*display: flex;*/
+    /*flex-wrap: wrap;*/
+    position: absolute;
+    height: 262px;
+    top: 173px;
+    border: 3px solid rgba(181, 159, 91, 0.6);
 
 }
 
@@ -407,26 +633,47 @@
 /*Footer styles*/
 
 .footer {
-
+    display: flex;
+    flex-wrap: wrap;
+    flex-flow: column;
+    margin-top: 67px;
 }
 
 .social-media {
+    width: 100%;
+    height: 82px;
     background-color: #f4f7f6;
+    margin: 0 auto;
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    gap: 27px;
 }
 
 .social-media__item {
-
+    display: inline-block;
+    justify-self: center;
+    align-self: center;
+    text-align: center;
+    margin: 0;
 }
 
 .social-media__logo {
-
+    justify-self: center;
+    align-self: center;
 }
 
 .copyright {
+    display: flex;
+    width: 100%;
+    margin-top: 58px;
+    justify-content: center;
 
 }
 
 .copyright__phrase {
+    display: inline-block;
+    padding-left: 12px;
     font-size: 0.75rem;
     line-height: 2.5rem;
     color: #999999;
