--- a/css/style.css
+++ b/css/style.css
@@ -109,7 +109,7 @@ a:visited {
 .main-header {
     height: 450px;
     width: 100%;
-    background-image: url("/images/banner-bg.jpg");
+    background-image: url(/images/banner-bg.jpg);
     background-position-y: -1px;
     background-repeat: no-repeat;
     position: relative;
@@ -228,22 +228,22 @@ a:visited {
 }
 
 .link-container__block-1 {
-    background-image: url("/images/trend1.jpg");
+    background-image: url(/images/trend1.jpg);
     background-position-x: -5px;
 }
 
 .link-container__block-2 {
-    background-image: url("/images/trend2.jpg");
+    background-image: url(/images/trend2.jpg);
     background-position-x: 0;
 }
 
 .link-container__block-3 {
-    background-image: url("/images/trend3.jpg");
+    background-image: url(/images/trend3.jpg);
     background-position-x: -1px;
 }
 
 .link-container__block-4 {
-    background-image: url("/images/trend4.jpg");
+    background-image: url(/images/trend4.jpg);
     background-position-x: -1px;
     background-position-y: 0;
 }
