--- a/css/style.css
+++ b/css/style.css
@@ -243,7 +243,7 @@ a:visited {
 }
 
 .link-container__block-4 {
-    background-image: url(/images/trend4.jpg);
+    background-image: url("images/trend4.jpg");
     background-position-x: -1px;
     background-position-y: 0;
 }
