--- a/css/style.css
+++ b/css/style.css
@@ -39,16 +39,8 @@ a {
    text-decoration: none;
 }
 
-a:link {
-    color: #ffffff;
-}
-
-a:visited {
-    color: #ffffff;
-}
-
-.link {
-
+.link:link, .link:visited {
+    color: #0f0d0e;
 }
 
 .heading {
@@ -56,37 +48,27 @@ a:visited {
     line-height: 1.821875rem;
     padding: 0;
     margin: 0;
+    color: #0f0d0e;
 }
 
-.tag {
+a .heading:hover {
+    color: #b59f5b;
+}
+
+.tag, .tag:link, .tag:visited {
     text-transform: uppercase;
     font-size: 0.875rem;
     color: #b59f5b;
-    line-height: 2.5rem;
     font-weight: bold;
+}
+
+.tag:hover {
+    border-bottom: 2px #b59f5b solid;
 }
 
 .data {
     font-size: 0.75rem !important;
     color: #888888;
-    /*line-height: 2.5rem;*/
-}
-
-.main-section-header {
-
-}
-
-.content-container {
-
-}
-
-.header {
-    margin: 0;
-    padding: 0;
-}
-
-.content-container__item {
-
 }
 
 .button-link {
@@ -96,18 +78,31 @@ a:visited {
     background-color: #b59f5b;
 }
 
-.input {
-    background-color: #f4f7f6;
-    outline: 0;
-    outline-offset: 0;
-    border: 0;
-
+.button-link:hover, .button-link:focus {
+    background-color: #323232;
 }
 
 .button {
     outline: 0;
     outline-offset: 0;
     border: 0;
+}
+
+.input {
+    color: rgba(0,0,0,0.54);
+    font-size: 0.8125rem;
+    background-color: #f4f7f6;
+    outline: 0;
+    outline-offset: 0;
+    border: 0;
+    padding-left: 16px;
+    padding-bottom: 4px;
+    height: 48px;
+    width: 270px;
+}
+
+input:focus {
+    outline: 1px solid #b59f5b;
 }
 
 .content-column {
@@ -136,57 +131,46 @@ a:visited {
     position: absolute;
     width: inherit;
     height: inherit;
-    background-color: rgba(0 0 0 /0.6);
-
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .main-header_elements-container {
     box-sizing: border-box;
-    padding: 29px 245px 0 245px;
+    margin: 29px 14.75903614% 0 14.75903614%;
     position: absolute;
     display: flex;
     flex-wrap: wrap;
     justify-content: space-between;
+    text-align: center;
 }
 
 .main-header__heading {
     font-size: 2.8125rem;
     color: #ffffff;
     line-height: 4.6875rem;
-    margin: 100px 19% 0 ;
-
-    /*padding: 126px 146px;*/
+    margin: 100px auto 0;
     text-align: center;
-    width: 100%;
-    font-variant-ligatures: normal;
-
-}
-
-.logo-link {
-
+    width: 60%;
 }
 
 .logo {
     padding-left: 3px;
-}
-
-.main-menu {
-
+    color: #ffffff;
 }
 
 .nav-links {
     display: flex;
     padding-top: 11px;
     gap: 35px;
-
 }
 
-.nav-links__item {
+.nav-links__link, .nav-links__link:link, .nav-links__link:visited {
+    font-size: 0.8125rem;
     color: #ffffff;
 }
 
-.nav-links__link {
-    font-size: 0.8125rem;
+.nav-links__link:hover {
+    border-bottom: 1px #ffffff solid;
 }
 
 /*Trand-section styles*/
@@ -202,7 +186,6 @@ a:visited {
 }
 
 .section-heading {
-    display: block;
     font-size: 1.25rem;
     line-height: 1.821875rem;
     text-align: center;
@@ -210,9 +193,9 @@ a:visited {
 }
 
 .section-heading:after {
+    content: "";
     display: block;
     width: 66px;
-    content: "";
     border-bottom: 3px solid #b59f5b;
     opacity: 40%;
     margin: 0 auto;
@@ -220,8 +203,7 @@ a:visited {
 }
 
 .section__content-container {
-    height: calc(443px - 123px);
-    width: initial;
+    height: 320px;
     display: flex;
     gap: 4px;
 }
@@ -236,11 +218,6 @@ a:visited {
 
 .section__item:nth-child(2), .section__item:nth-child(3) {
     width: 414px;
-}
-
-.link-container {
-    width: inherit;
-    height: inherit;
 }
 
 .link-container__block-1 {
@@ -278,16 +255,14 @@ a:visited {
     position: absolute;
     width: 100%;
     height: 100%;
-    background-color: rgba(0 0 0 /0.6);
+    background-color: rgba(0, 0, 0, 0.6);
 }
 
 .link-container__text-container {
     position: absolute;
-    max-width: 100%;
-    max-height: 100%;
     padding-bottom: 33px;
     padding-left: 32px;
-    padding-top: 19px;
+    padding-top: 34px;
     border: 3px solid rgba(181, 159, 91, 0.6);
     margin-bottom: 16px;
     align-self: end;
@@ -319,12 +294,10 @@ a:visited {
     font-size: 1.25rem;
     color: #ffffff;
     line-height: 1.5rem;
+    margin-top: 7px;
 }
 
 .link-container__tag {
-    display: inline-block;
-    line-height: 1.957rem;
-    margin-top: 9px;
     margin-left: 2px;
     margin-right: 12px;
 }
@@ -333,19 +306,16 @@ a:visited {
 
 .two-columns-section {
     display: flex;
-
+    padding-top: 51px;
 }
 
 .section-articles {
     width: 76.83760684%;
-        margin-top: 51px;
 }
 
 .articles {
     display: flex;
     flex-flow: column;
-    margin: 0;
-    padding: 0;
 }
 
 .articles__item:nth-child(1) {
@@ -364,72 +334,46 @@ a:visited {
     margin-bottom: 62px;
 }
 
-/*.articles__item:last-child {;*/
-/*    margin-bottom: 0;*/
-/*}*/
-
 .snippet {
     display: flex;
-    align-content: flex-start;
     height: 294px;
-    /*margin-top: -13px;*/
 }
 
 .text-block {
-    padding-left: 29px;
-    padding-right: 125px;
-}
-
-.snippet__header {
-
+    margin-top: 11px;
+    margin-left: 29px;
+    margin-right: 124px;
 }
 
 .snippet__tags {
     margin-left: 2px;
-    display: flex;
-    justify-content: flex-start;
-    gap: 18px;
-
 }
 
 .snippet__tag {
-    /*margin-right: 14px;*/
-}
-
-.snippet__link {
-
+    margin-right: 14px;
 }
 
 .snippet__heading {
     font-size: 1.25rem;
     line-height: 1.5rem;
-    margin-top: -4px;
-
+    margin-top: 7px;
 }
 
 .snippet__author-data-container {
-    margin-top: 30px;
+    margin-top: 29px;
     display: flex;
-    justify-content: flex-start;
     gap: 13px;
     margin-bottom: 47px;
-}
-
-.snippet__data {
-
 }
 
 .snippet__author {
     font-size: 0.75rem;
     color: #000000;
-    /*line-height: 2.5rem;*/
     font-weight: bold;
-
 }
 
 .snippet__text {
-    margin: 0;
-    padding-bottom: 10px;
+    margin-bottom: 10px;
 }
 
 .snippet__img {
@@ -440,17 +384,10 @@ a:visited {
 
 .aside {
     width: 23.16239316%;
-}
-
-.label {
-}
-
-.new-posts {
-
+    margin-top: -53px;
 }
 
 .aside__header {
-    margin-top: -2px;
     margin-left: 5px;
     margin-bottom: 10px;
 }
@@ -459,25 +396,20 @@ a:visited {
     font-size: 0.875rem;
 }
 
-.aside__content-container {
-    padding-top: 17px;
+.aside__text:after {
+    padding-bottom: 5px;
+}
+
+.aside-content-container {
+    padding-top: 19px;
     display: flex;
     flex-flow: column;
     gap: 22px;
 }
 
-.content-container__item {
-    margin: 0;
-    padding: 0;
-}
-
 .article-link {
     display: flex;
     height: 70px;
-    justify-content: start;
-}
-
-.article-link__image {
 }
 
 .article-link__text-container {
@@ -485,10 +417,6 @@ a:visited {
     display: flex;
     flex-wrap: wrap;
     height: 70px;
-    justify-content: start;
-    /*align-content: ;: start;*/
-
-
 }
 
 .article-link__data {
@@ -499,11 +427,6 @@ a:visited {
 .article-link__name {
     height: 52px;
     line-height: 1.125rem;
-    /*align-self: start;*/
-    /*vertical-align: super;*/
-
-    /*margin: 0;*/
-    /*padding: 0;*/
 }
 
 .search {
@@ -511,42 +434,35 @@ a:visited {
 }
 
 .search-form {
-    /*width: 267px;*/
-    /*height: 219px;*/
     display: flex;
-    margin: 0;
 }
 
-.search-form__label {
-    /*margin-top: 10px;*/
+.form {
+    border: 1px solid #ffffff;
+}
+
+.form:hover {
+    border-bottom: 1px #ebe7d7 solid;
 }
 
 .search-form__input {
-    height: 48px;
     width: 222px;
 }
 
 .search-form__button {
-    /*position: relative;*/
+    position: relative;
     width: 48px;
     height: 48px;
-
 }
 
 .search-form__img {
-    /*position: absolute;*/
-    /*top: 25%;*/
-    /*right: 25%;*/
-        /*text-align: center;*/
-    /*padding-top: 10px;*/
-    /*vertical-align: center;*/
-    vertical-align: -4px;
-    text-align: center;
+    position: absolute;
+    top: calc(25% + 4px);
+    right: calc(25% + 2px);
 }
 
 .subscribe {
-    margin-top: -4px;
-
+    margin-top: -6px;
 }
 
 .subscribe__header {
@@ -554,17 +470,14 @@ a:visited {
 }
 
 .subscribe-form {
-    margin-top: 21px;
-    /*margin-left: 3px;*/
+    margin-top: 23px;
 }
 
 .subscribe-form__label {
 }
 
 .subscribe-form__input {
-    width: 266px;
-    height: 45px;
-
+    box-sizing: border-box;
 }
 
 .subscribe-form__button {
@@ -573,12 +486,8 @@ a:visited {
     height: 48px;
 }
 
-.tags {
-
-}
-
 .tags__header {
-    margin-top: -4px;
+    margin-top: -5px;
     margin-bottom: 23px;
 }
 
@@ -586,9 +495,6 @@ a:visited {
     display: flex;
     flex-wrap: wrap;
     gap: 5px;
-    justify-items: left;
-    justify-content: left;
-    align-content: space-between;
     height: 102px;
 }
 
@@ -596,8 +502,10 @@ a:visited {
     color: #0f0d0e;
     border: 3px #f4f3f1 solid;
     padding: 3px 13px;
-    /*align-self: center;*/
-    /*vertical-align: center;*/
+}
+
+.tag-container__item:hover {
+    border-color: #b59f5b;
 }
 
 .tag-container__tag {
@@ -606,34 +514,32 @@ a:visited {
     font-size: 0.75rem;
 }
 
-.tag-container__tag:link {
+.tag-container__tag {
     color: #0f0d0e;
 }
 
-.tag-container__tag:visited {
-    color: #0f0d0e;
+.tag-container .tag:hover {
+    border: 0;
 }
 
-.topics {
-    margin-top: -6px;
+.topics .header {
+    margin-top: -4px;
+    margin-bottom: 13px;
 }
 
 .topics-container {
     display: flex;
     flex-direction: column;
+    gap: 5px;
     justify-content: space-between;
     height: 280px;
 }
 
 .topics-container__item {
-    content: " ";
     border-bottom: 1px #eeeeee solid;
     width: 100%;
-    padding-bottom: 5px;
-}
-
-. topics-container__topic {
-    /*width: 100%;*/
+    height: 16.66666667%;
+    justify-self: center;
 }
 
 .topic-container__link {
@@ -641,19 +547,20 @@ a:visited {
 }
 
 .topic-container__name {
-    display: inline-block;
     font-size: 0.875rem;
     color: #000000;
     vertical-align: -3px;
+    align-self: center;
+}
 
+.topic-container__name:hover {
+    color: #b59f5b;
 }
 
 .topic-container__posts-quantity {
-    display: inline-block;
     font-size: 0.75rem;
     line-height: 2.30125rem;
     color: #b59f5b;
-
 }
 
 .shop {
@@ -669,17 +576,12 @@ a:visited {
 
 }
 
-.content-container__item {
-
-}
-
 .shop__item {
     position: relative;
     box-sizing: border-box;
     width: 347px;
     display: flex;
     flex-flow: column;
-
 }
 
 .shop__image {
@@ -691,7 +593,6 @@ a:visited {
     display: flex;
     flex-wrap: wrap;
     box-sizing: border-box;
-    justify-content: start;
     align-content: start;
     position: absolute;
     height: 267px;
@@ -699,8 +600,6 @@ a:visited {
     border: 3px solid rgba(181, 159, 91, 0.6);
     padding-top: 50px;
     padding-left: 19px;
-
-
 }
 
 .shop__name {
@@ -709,31 +608,28 @@ a:visited {
     font-size: 1.25rem;
     color: #000000;
     align-self: start;
-    margin: 0 0 0;
+    margin: 0;
 }
 
 .shop__text {
     width: 100%;
-    display: inline-block;
     color: #0f0d0e;
     align-self: start;
     margin-top: 7px;
     margin-right: 20px;
     margin-bottom: 21px;
-    /*padding: 0;*/
 }
 
-.shop__additional-link:link {
-    color: #b59f5b;
+.shop__additional-link:hover {
+    border-bottom: 1px solid #b59f5b;
 }
 
-.shop__additional-link:visited {
+.shop__additional-link:link, .shop__additional-link:visited {
     color: #b59f5b;
 }
 
 .shop__price-container {
     align-self: end;
-    justify-self: center;
     font-weight: bold;
     display: flex;
     flex-flow: column;
@@ -747,26 +643,25 @@ a:visited {
     font-size: 0.875rem;
     line-height: 1.3rem;
     text-decoration: line-through;
-
 }
 
 .shop__price {
     justify-self: start;
     line-height: 0.95rem;
     font-size: 1.25rem;
-
 }
 
 .shop__link {
-    /*box-sizing: border-box;*/
     height: 49px;
     width: 140px;
     align-self: end;
     text-align: center;
     font-size: 0.875rem;
     line-height: 3.1rem;
-    /*margin-bottom: 20px;*/
-    /*padding: 0;*/
+}
+
+.shop__link:link, .shop__link:visited {
+    color: #ffffff;
 }
 
 /*Footer styles*/
@@ -789,17 +684,8 @@ a:visited {
     gap: 27px;
 }
 
-.social-media__item {
-    display: inline-block;
-    justify-self: center;
-    align-self: center;
-    text-align: center;
-    margin: 0;
-}
-
 .social-media__logo {
-    justify-self: center;
-    align-self: center;
+    /*vertical-align: 1px;*/
 }
 
 .copyright {
@@ -807,7 +693,6 @@ a:visited {
     width: 100%;
     margin-top: 58px;
     justify-content: center;
-
 }
 
 .copyright__phrase {
@@ -817,10 +702,4 @@ a:visited {
     line-height: 2.5rem;
     color: #999999;
     font-weight: bold;
-}
-
-/*Модификаторы*/
-
-.search-form__button_disable {
-
 }
