--- a/css/style.css
+++ b/css/style.css
@@ -26,6 +26,7 @@
     font-style: normal;
     color: #0f0d0e;
     max-width: 1660px;
+    min-width: 1200px;
     margin: 0 auto;
 }
 
@@ -106,7 +107,9 @@ input:focus {
 }
 
 .content-column {
-    width: 1170px;
+    /*width: 70.48192771%;*/
+    max-width: 70.48192771%;
+    min-width: 1170px;
     margin: 0 auto;
 }
 
@@ -120,9 +123,11 @@ input:focus {
 .main-header {
     position: relative;
     height: 450px;
+    min-height: fit-content;
     width: 100%;
     background-image: url(../images/banner-bg.jpg);
     background-position-y: -1px;
+    background-position-x: center;
     background-repeat: no-repeat;
 }
 
@@ -198,7 +203,7 @@ input:focus {
 }
 
 .section__content-container {
-    height: 320px;
+    min-height: 320px;
     display: flex;
     gap: 4px;
 }
@@ -222,7 +227,6 @@ input:focus {
 
 .link-container__block-2 {
     background-image: url(../images/trend2.jpg);
-    background-position-x: 0;
 }
 
 .link-container__block-3 {
@@ -233,7 +237,6 @@ input:focus {
 .link-container__block-4 {
     background-image: url(../images/trend4.jpg);
     background-position-x: -1px;
-    background-position-y: 0;
 }
 
 .link-container__interior {
@@ -256,6 +259,7 @@ input:focus {
 .link-container__text-container {
     position: absolute;
     align-self: end;
+    justify-content: center;
     margin-bottom: 16px;
     padding-bottom: 33px;
     padding-left: 32px;
@@ -302,10 +306,11 @@ input:focus {
 .two-columns-section {
     display: flex;
     padding-top: 51px;
+    margin: 0 auto;
 }
 
 .section-articles {
-    width: 76.83760684%;
+    margin: 0 auto;
 }
 
 .articles {
@@ -331,7 +336,8 @@ input:focus {
 
 .snippet {
     display: flex;
-    height: 294px;
+    width: 100%;
+    /*height: 294px;*/
 }
 
 .text-block {
@@ -447,6 +453,7 @@ input:focus {
 .search-form__button {
     position: relative;
     width: 48px;
+    min-width: 48px;
     height: 48px;
 }
 
