--- a/css/style.css
+++ b/css/style.css
@@ -1,10 +1,5 @@
 @import "normalize.css";
 
-h2 {
-  vertical-align: center;
-  text-align: center;
-}
-
 @font-face {
     font-family: "Open Sans";
     src: local("OpenSans-Regular"), url(../fonts/OpenSans-Regular.woff) format("woff"),
@@ -25,14 +20,12 @@ h2 {
 
 /*General-styles*/
 
-
 .page {
     font-family: "Open Sans", Arial, sans-serif;
     font-weight: normal;
     font-style: normal;
     color: #0f0d0e;
     max-width: 1660px;
-    /*!*min-width: 1200px;*!  Включить на последнем этапе для десктопной версии */
     margin: 0 auto;
 }
 
@@ -161,21 +154,19 @@ input:focus {
     margin: 0 auto;
 }
 
-@media screen and (min-width: 641px) and (max-width: 1200px) {
+@media screen and (min-width: 641px) and (max-width: 1199px) {
     .main-header {
         height: 392px;
         background-image: url(../images/banner-bg-tablet.jpg);
     }
 }
 
-@media screen and (min-width: 1201px) {
+@media screen and (min-width: 1200px) {
     .main-header {
         height: 450px;
-        min-height: fit-content;
-        max-width: 100%;
+        width: 100%;
         background-image: url(../images/banner-bg.jpg);
         background-position-y: -1px;
-        background-position-x: center;
         background-repeat: no-repeat;
     }
 }
@@ -211,6 +202,20 @@ input:focus {
     }
 }
 
+@media screen and (min-width: 1200px) {
+    .main-header_elements-container {
+        max-width: 70.48192771%;
+        width: 100%;
+        flex-direction: row;
+        text-align: unset;
+        justify-content: space-between;
+        align-content: unset;
+        box-sizing: border-box;
+        margin: 0 14.75903614% 0 14.75903614%;
+        padding-top: 29px;
+    }
+}
+
 .main-header__heading {
     /*margin: 328px auto;*/
     width: calc(100% - 60px);
@@ -228,6 +233,7 @@ input:focus {
         justify-self: center;
         /*align-self: start;*/
         height: 100px;
+        width: 100%;
         font-size: 1.625rem;
         line-height: 2.25rem;
         text-align: center;
@@ -235,19 +241,24 @@ input:focus {
     }
 }
 
-@media screen and (min-width: 1201px) {
+@media screen and (min-width: 1200px) {
     .main-header__heading {
-        margin: 100px auto 0;
         width: 60%;
-        font-size: 1.625rem;
-        line-height: 2.25rem;
-        text-align: center;
-        color: #ffffff;
+        /*height: calc(100% - 101px);*/
+        margin: -87px auto;
+        padding: 0;
+        align-self: start;
+        font-size: 2.8125rem;
+        line-height: 4.6875rem;
+
     }
+}
+
+.logo-link {
+    height: 41px;
 }
 
 .logo {
-    /*position: absolute;*/
     width: 269px;
     align-self: center;
     max-width: 100%;
@@ -264,12 +275,27 @@ input:focus {
     }
 }
 
+@media screen and (min-width: 1200px) {
+    .logo {
+        align-self: start;
+        justify-self: left;
+        height: 41px;
+        width: 179px;
+        max-width: 100%;
+        margin: 0;
+        padding-left: 3px;
+        color: #ffffff;
+    }
+}
+
+
+
 .main-menu {
     order: -1;
     justify-self: start;
 }
 
-@media screen and (min-width: 641px) and (max-width: 1199px) {
+@media screen and (min-width: 641px) {
     .main-menu {
         order: 0;
         justify-self: start;
@@ -277,14 +303,13 @@ input:focus {
 }
 
 @media screen and (min-width: 1200px) {
-    .logo {
-        padding-left: 3px;
-        color: #ffffff;
+    .main-menu {
+        height: 41px;
     }
 }
 
 
-@media screen and (max-width: 1200px) {
+@media screen and (max-width: 1199px) {
     .hamburger-menu {
         order: -1;
     }
@@ -452,12 +477,12 @@ input:focus {
 
 @media screen and (min-width: 1200px) {
     .section__header {
-        height: 123px;
+        height: 67px;
+        margin-top: 56px;
     }
 }
 
 .section-heading {
-    /*padding-top: 56px;*/
     font-size: 1rem;
     line-height: 1.821875rem;
 }
@@ -474,7 +499,7 @@ input:focus {
 
 .section__content-container {
     height: 100%;
-    width: 100%
+    width: 100%;
     margin: 0 auto;
     display: flex;
     flex-wrap: wrap;
@@ -485,6 +510,7 @@ input:focus {
 @media screen and (min-width: 1200px) {
     .section__content-container {
         gap: 4px;
+        flex-wrap: nowrap;
     }
 }
 
@@ -502,7 +528,12 @@ input:focus {
     }
 }
 
-
+@media screen and (min-width: 1200px) {
+    .section__item {
+        /*width: calc(50% - 1.5px);*/
+        height: 320px;
+    }
+}
 
 @media screen and (min-width: 1200px) {
     .section__item:first-child, .section__item:last-child {
@@ -591,32 +622,35 @@ input:focus {
 
 @media screen and (min-width: 1200px) {
     .link-container__text-container {
-        padding-bottom: 33px;
+        padding-bottom: 34px;
         padding-left: 32px;
-        padding-top: 34px;
-        border: 3px solid rgba(181, 159, 91, 0.6);
+        padding-top: 38px;
     }
 
     .link-container__block-1 .link-container__text-container {
+        width: calc(100% - 144px);
         margin-left: 19px;
         margin-right: 22px;
         padding-right: 65px;
     }
 
-    .link-container__block-4 .link-container__text-container {
-        margin-right: 19px;
-        margin-left: 22px;
-    }
-
     .link-container__block-2 .link-container__text-container {
+        width: calc(100% - 83px);
         margin-left: 21px;
         margin-right: 24px;
     }
 
     .link-container__block-3 .link-container__text-container {
+        width: calc(100% - 148px);
         margin-right: 21px;
         margin-left: 24px;
         padding-right: 65px;
+    }
+
+    .link-container__block-4 .link-container__text-container {
+        width: calc(100% - 79px);
+        margin-right: 19px;
+        margin-left: 22px;
     }
 }
 
@@ -652,7 +686,8 @@ input:focus {
 
 @media screen and (min-width: 1200px) {
     .two-columns-section {
-        padding-top: 51px;
+        padding-top: 64px;
+        /*gap: 4.87106017%;*/
     }
 }
 
@@ -663,12 +698,13 @@ input:focus {
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .section-articles {
         margin: 0;
+        width: 56.30372493%;
     }
 }
 
-@media screen and (min-width: 641px) and (max-width: 1199px) {
+@media screen and (min-width: 1199px) {
     .section-articles {
-        width: 56.30372493%;
+        width: 76.83760684%;
     }
 }
 
@@ -679,27 +715,40 @@ input:focus {
     width: 100%;
 }
 
-/*.articles__item:nth-child(1) {*/
-/*    margin-bottom: 59px;*/
-/*}*/
+@media screen and (min-width: 1200px) {
+    .articles {
+        gap: 56px;
+    }
 
-/*.articles__item:nth-child(2) {*/
-/*    margin-bottom: 60px;*/
-/*}*/
+    .articles__item:nth-child(2) {
+        margin-bottom: 0px;
+    }
 
-/*.articles__item:nth-child(3) {*/
-/*    margin-bottom: 61px;*/
-/*}*/
+    .articles__item:nth-child(3) {
+        margin-bottom: 2px;
+    }
 
-/*.articles__item:nth-child(4) {*/
-/*    margin-bottom: 62px;*/
-/*}*/
+    .articles__item:nth-child(4) {
+        margin-bottom: 2px;
+    }
+}
 
 .snippet {
     display: flex;
     flex-wrap: wrap;
     width: 100%;
-    /*height: 294px;*/
+}
+
+@media screen and (max-width: 640px) {
+    .snippet {
+        justify-content: center;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .snippet {
+
+    }
 }
 
 .articles__item {
@@ -707,8 +756,17 @@ input:focus {
     padding: 0;
     margin: 0;
 }
+
 .text-block {
     width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+    .text-block {
+        width: 300px;
+        margin-top: 0;
+        margin-left: 29px;
+    }
 }
 
 .articles__item:after {
@@ -727,10 +785,8 @@ input:focus {
 }
 
 @media screen and (min-width: 1200px) {
-    .text-block {
-        margin-top: 11px;
-        margin-left: 29px;
-        margin-right: 124px;
+    .articles__item:after {
+        display: none;
     }
 }
 
@@ -741,6 +797,8 @@ input:focus {
 @media screen and (min-width: 1200px) {
     .snippet__tags {
         margin-left: 2px;
+        padding: 0 0 9px;
+        line-height: 0.8rem;
     }
 }
 
@@ -750,6 +808,8 @@ input:focus {
 
 @media screen and (min-width: 1200px) {
     .snippet__tag {
+        margin-top: 0;
+        line-height: 0;
         margin-right: 14px;
     }
 }
@@ -787,6 +847,7 @@ input:focus {
 }
 
 .snippet__img {
+    /*margin 0 auto;*/
     width: auto;
     max-width: 100%;
 }
@@ -821,8 +882,10 @@ input:focus {
 
 @media screen and (min-width: 1200px) {
     .aside__header {
-        margin-left: 5px;
+        margin-left: 3px;
         margin-bottom: 10px;
+        margin-top: -10px;
+        height: 38px;
     }
 }
 
@@ -834,17 +897,29 @@ input:focus {
     padding-bottom: 5px;
 }
 
+@media screen and (min-width: 1200px) {
+    .aside__text:after {
+        padding-bottom: 0;
+    }
+}
+
 .aside-content-container {
     display: flex;
     flex-flow: column;
     gap: 22px;
-    padding-top: 19px;
+    padding-top: 18px;
 }
 
 .article-link {
     display: flex;
     height: 69px;
     max-width: 100%;
+}
+
+@media screen and (min-width: 1200px) {
+    .article-link {
+        height: 70px;
+    }
 }
 
 .article-link__text-container {
@@ -910,17 +985,26 @@ input:focus {
     max-width: 50%;
 }
 
+/**/
 .subscribe {
     /*margin-top: -6px;*/
 }
 
-.subscribe__header {
-    /*margin-left: -3px;*/
+
+@media screen and (min-width: 1200px) {
+    .subscribe__header {
+        margin-left: -3px;
+        margin-top: 51px;
+    }
 }
 
-.subscribe-form {
-    /*margin-top: 23px;*/
+
+@media screen and (min-width: 1200px) {
+    .subscribe-form {
+        margin-top: 23px;
+    }
 }
+
 
 .subscribe-form__input {
     box-sizing: border-box;
@@ -941,10 +1025,13 @@ input:focus {
 }
 
 
-.tags__header {
-    /*margin-top: -5px;*/
-    /*margin-bottom: 23px;*/
+@media screen and (min-width: 1200px) {
+    .tags__header {
+        margin-top: 50px;
+        text-align: center;
+    }
 }
+
 
 .tag-container {
     display: flex;
@@ -954,10 +1041,25 @@ input:focus {
     /*height: 102px;*/
 }
 
+@media screen and (min-width: 1200px) {
+    .tag-container {
+        margin-top: 22px;
+    }
+}
+
 .tag-container__item {
     border: 3px #f4f3f1 solid;
     padding: 2px 12px;
     color: #0f0d0e;
+}
+
+@media screen and (min-width: 1200px) {
+    .tag-container__item {
+        padding: 3px 13px;
+        /*display: flex;*/
+        /*justify-content: center;*/
+        /*align-items: center;*/
+    }
 }
 
 .tag-container__item:hover {
@@ -972,21 +1074,31 @@ input:focus {
     vertical-align: center;
 }
 
+@media screen and (min-width: 1200px) {
+    .tag-container__tag {
+        line-height: 0;
+    }
+}
+
 .tag-container .tag:hover {
     border: 0;
 }
 
-.topics .header {
-    /*margin-top: -4px;*/
-    /*margin-bottom: 13px;*/
+@media screen and (min-width: 1200px) {
+    .topics .header {
+        margin-top: 53px;
+        text-align: center;
+    }
 }
+
 
 .topics-container {
     display: flex;
     flex-direction: column;
     gap: 5px;
     justify-content: space-between;
-    height: 280px;
+    height: 281px;
+    padding-top: 2px;
 }
 
 .topics-container__item {
@@ -1021,7 +1133,7 @@ input:focus {
 
 .shop {
     /*height: 562px;*/
-    /*padding-top: 13px;*/
+    margin-top: -2px;
 }
 
 .shop__content-container {
@@ -1031,13 +1143,21 @@ input:focus {
     /*justify-content: space-between;*/
     justify-content: left;
     gap: 26px;
-    /*width: 100%;*/
+    width: 100%;
     /*height: 100%;*/
 }
 
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .shop__content-container {
-        gap: 22px;
+        justify-items: center;
+    }
+}
+
+@media screen and (min-width: 1200px) {
+    .shop__content-container {
+        justify-content: space-between;
+        flex-wrap: unset;
+        gap: unset;
     }
 }
 
@@ -1047,13 +1167,26 @@ input:focus {
     flex-flow: column;
     display: flex;
     margin: 0 auto;
-    /*width: 347px;*/
 }
 
-@media screen and (min-width: 768px) and (max-width: 1164px) {
+@media screen and (min-width: 768px) and (max-width: 1199px) {
     .shop__item {
         margin: 0;
     }
+}
+
+@media screen and (min-width: 1200px) {
+    .shop__item {
+        width: 347px;
+        margin: 0;
+    }
+}
+
+@media screen and (max-width: 346px) {
+    .shop__item {
+        width: 100%;
+    }
+
 }
 
 .shop__image {
@@ -1174,6 +1307,12 @@ input:focus {
     background-color: #f4f7f6;
 }
 
+@media screen and (min-width: 1200px) {
+    .social-media {
+        height: 82px;
+    }
+}
+
 .copyright {
     height: 109px;
     display: flex;
@@ -1182,6 +1321,14 @@ input:focus {
     width: 100%;
     /*margin-top: 58px;*/
 }
+
+@media screen and (min-width: 1200px) {
+    .copyright {
+        height: 130px;
+        margin-top: 12px;
+    }
+}
+
 
 .copyright__phrase {
     padding-left: 12px;
