--- a/css/style.css
+++ b/css/style.css
@@ -233,7 +233,6 @@ input:focus {
         justify-self: center;
         /*align-self: start;*/
         height: 100px;
-        width: 100%;
         font-size: 1.625rem;
         line-height: 2.25rem;
         text-align: center;
@@ -721,7 +720,7 @@ input:focus {
     }
 
     .articles__item:nth-child(2) {
-        margin-bottom: 0px;
+        margin-bottom: 0;
     }
 
     .articles__item:nth-child(3) {
@@ -1193,8 +1192,6 @@ input:focus {
     margin: 0 auto;
     width: auto;
     max-width: 100%;
-    margin: 0 auto;
-
 }
 
 .shop__card {
