fix: Fixed problem with tablet screen
main-header_elements-container - position: absolute;

--- a/css/style.css
+++ b/css/style.css
@@ -467,7 +467,7 @@ input:focus {
 }
 
 .main-header_elements-container {
-    position: relative;
+    position: absolute;
     display: flex;
     flex-wrap: wrap;
     flex-direction: column;
