fix: Cleanup and verification HTML and CSS and naming banner toggle class ._hidden

--- a/css/style.css
+++ b/css/style.css
@@ -177,11 +177,11 @@ input:focus {
     background-color: rgba(0, 0, 0, 0.6);
 }
 
-.banner__toggle {
+._hidden {
     display: none;
 }
 
-.banner__toggle:checked + .banner-section {
+._hidden:checked + .banner-section {
     display: block;
 }
 
