Improve rubber layout for article pictures in the mobile version
After this correction article's image will have a rubber properties in mobile version.

--- a/css/style.css
+++ b/css/style.css
@@ -1184,8 +1184,6 @@ input:focus {
 @media screen and (min-width: 641px) and (max-width: 1199px) {
     .section-articles {
         margin: 0;
-        flex-basis: calc(100% - (35px*3) - 270px)
-        /*width: auto;*/
     }
 }
 
@@ -1407,7 +1405,7 @@ input:focus {
     }
 }
 
-@media screen and (min-width: 641px) and (max-width: 1199px) {
+@media screen and (max-width: 1199px) {
     .snippet__link {
         display: block;
         width: 100%;
