--- a/css/style.css
+++ b/css/style.css
@@ -512,7 +512,7 @@ input:focus {
 .main-header {
     position: relative;
 
-    /*height: 639px;*/
+    height: 639px;
     width: 100%;
     max-width: 100%;
     margin: 0 auto;
@@ -1889,8 +1889,9 @@ input:focus {
     }
 }
 
-.shop__image {
-    margin: 0 auto;
+.shop__image, .shop__image img {
+    margin: 0 22px;
+    width: calc(100% - (22px*2));
     max-width: 100%;
     height: auto;
 }
