--- a/css/style.css
+++ b/css/style.css
@@ -1156,7 +1156,7 @@ input:focus {
 }
 
 .link-container__tag {
-    margin-right: 12px;
+    margin-right: 15px;
     margin-left: 2px;
 }
 
@@ -1641,7 +1641,7 @@ input:focus {
     margin-top: 18px;
 }
 
-@media screen and (min-width: 641px) and (max-width: 1199px) {
+@media screen and (min-width: 641px) {
     .subscribe-form__button {
         height: 48px;
         margin-top: 17px;
@@ -1709,7 +1709,7 @@ input:focus {
 }
 
 .tag-container__item {
-    padding: 2px 12px;
+    padding: 2px 10px;
     border: 3px #f4f3f1 solid;
 }
 
@@ -1931,6 +1931,7 @@ input:focus {
 @media screen and (min-width: 1200px) {
     .shop__card {
         display: flex;
+        margin-top: -38px;
         min-height: 267px;
         box-sizing: border-box;
     }
